# py-quart-schema-typed

./: .bumpversion.toml  .copier-answers.yml  INIT.md  README.md  pyproject.toml
.github/workflows/: release.yml  testrelease.yml
examples/: dataclass_demo.py  pydantic_demo.py
src/quart_schema_typed/: __init__.py
tests/: test_version.py
