[project]
name = "quart-schema-typed"
version = "0.1.0"
description = "Automatic quart-schema based on typing"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Kalle M. Aagaard", email = "git@k-moeller.dk"},
]
maintainers = [
    {name = "Kalle M. Aagaard", email = "git@k-moeller.dk"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "quart-schema>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/KalleDK/py-quart-schema-typed"
Documentation = "https://github.com/KalleDK/py-quart-schema-typed"
Repository = "https://github.com/KalleDK/py-quart-schema-typed.git"

[dependency-groups]
test = [
    "pytest>=8.4.2",
]
stubs = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quart_schema_typed"]

[tool.pyright]
include = ["src", "tests", "examples"]
typeCheckingMode = "strict"
exclude = ["**/__pycache__"]
pythonVersion = "3.13"

[tool.ruff]
line-length = 120
target-version = "py313"
