[project]
name = "quart-schema-typed"
version = "0.1.3"
description = "Automatic quart-schema based on typing"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Kalle M. Aagaard", email = "git@k-moeller.dk"},
]
maintainers = [
    {name = "Kalle M. Aagaard", email = "git@k-moeller.dk"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "quart-schema>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/KalleDK/py-quart-schema-typed"
Documentation = "https://github.com/KalleDK/py-quart-schema-typed"
Repository = "https://github.com/KalleDK/py-quart-schema-typed.git"

[dependency-groups]
test = [
    "pytest>=9.0.2",
]
stubs = []
examples = [
    "pydantic>=2.12.5",
    "quart>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "quart_schema_typed"

[tool.pyright]
include = ["src", "tests", "examples"]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.ruff]
line-length = 120
target-version = "py313"
